# solid-crud-client

./: README.md  pyproject.toml
solid_client/: auth.py  client.py  config.py  example.py
